Add homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "underground-dao",
   "version": "0.1.0",
+  "homepage": "https://alexperedel.github.io/dino-dao",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
